--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,48 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<!--顧客一覧画面-->
+
+<div class="container my-5">
+  <%= render 'admin/header' %>
+
+  <div class="row mt-5">
+    <h3>会員一覧</h3>
+  </div>
+
+  <div class="row mt-5">
+    <table class="table text-center">
+      <thead>
+        <tr>
+          <th>会員ID</th>
+          <th>プロフィール画像</th>
+          <th>ニックネーム</th>
+          <th>メールアドレス</th>
+          <th>ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @customers.each do |customer| %>
+        <tr>
+          <td><%= customer.id %></td>
+          <td><%= image_tag customer.profile_image, size: "80x80" %></td>
+          <td>
+            <%= link_to admin_customer_path(customer.id) do %>
+            <%= customer.name %>
+            <% end %>
+          </td>
+          <td><%= customer.email %></td>
+          <td>
+          <% if customer.is_deleted %>
+            <span class="text-danger">
+              <strong>退会</strong>
+            </span>
+          <% else %>
+            <span class="text-primary">
+              <strong>有効</strong>
+            </span>
+          <% end %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
