--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,49 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<!--会員情報詳細画面-->
+<div class="container my-5">
+  <%= render 'admin/header' %>
+
+<div class="row mt-3">
+  <h3><%= @customer.name %>さんの会員詳細</h3>
+</div>
+
+<div class="row mt-3">
+    <%= image_tag @customer.profile_image, size: "250x250" %>
+</div>
+
+<div class="row mt-5">
+  <table class="table table-borderless">
+    <tbody>
+      <tr>
+        <td width="120">会員ID</td>
+        <td width="300"><%= @customer.id %></td>
+      </tr>
+      <tr>
+        <td>ニックネーム</td>
+        <td><%= @customer.name %></td>
+      </tr>
+      <tr>
+        <td>メールアドレス</td>
+        <td><%= @customer.email %></td>
+      </tr>
+      <tr>
+        <td>会員ステータス</td>
+        <td>
+          <% if @customer.is_deleted %>
+            <span class="text-danger">
+              <strong>退会</strong>
+            </span>
+          <% else %>
+            <span class="text-primary">
+              <strong>有効</strong>
+            </span>
+          <% end %>
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><%= link_to "編集する", edit_admin_customer_path(@customer.id), class: "btn btn-success" %></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+</div>
