--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<!--投稿一覧-->
+<div class="container my-5">
+  <%= render 'admin/header' %>
+
+<div class="row mt-5">
+  <h3>投稿一覧</h3>
+</div>
+
+<div class="row">
+  <% @items.each do |item| %>
+
+  <div class="col-3 mt-3">
+    <%= link_to admin_item_path(item) do %>
+      <%= image_tag item.get_image(300,300) %></br>
+    <span>
+      <%= item.name %>
+      <% end %>
+    </span>
+  </div>
+  <% end %>
+</div>
+
+<div class="container">
+	<div class="row">
+	 <div class="col-md-4 offset-md-4 py-2 mt-5">
+	 	<%= paginate @items %>
+	 </div>
+	</div>
+ </div>
+
+</div>
