--- a/app/views/public/customers/_user.html.erb
+++ b/app/views/public/customers/_user.html.erb
@@ -2,7 +2,7 @@
   <div class="container px-5 px-sm-0">
     <div class="row-md-1">
       <h2>User info</h2>
-      <%= image_tag @customer.get_profile_image(80,80) %>
+      <%= image_tag customer.get_profile_image(100,100) %>
 
       <table class="table">
         <tbody>
@@ -15,10 +15,14 @@
 
       <div class="row">
         <div class="col text-center">
+          <% if @customer == current_customer %>
             <%= link_to edit_customer_path(customer.id), class:"btn btn-outline-secondary btn-block" do %>
               <i class="fas fa-user-cog"></i>
             <% end %>
+          <% else %>
+          <% end %>
         </div>
       </div>
+      
     </div>
   </div>
