--- a/app/views/public/items/edit.html.erb
+++ b/app/views/public/items/edit.html.erb
@@ -1,4 +1,48 @@
-<%= render 'public/header' %>
+<div class="container">
+  <%= render 'public/header' %>
 
-<h1>Public::Items#edit</h1>
-<p>Find me in app/views/public/items/edit.html.erb</p>
+<!--更新できなかった時のエラーメッセージ-->
+<div class="row d-flex justify-content-center">
+  <% if flash[:item_updated_error] %>
+    <span class="text-danger"><%= flash[:item_updated_error] %></span>
+  <% end %>
+</div>
+
+<!--投稿編集画面-->
+
+<div class="row mt-5">
+  <h3>投稿編集</h3>
+</div>
+
+<%= form_with model: @item, url: item_path, method: :patch do |f| %>
+<table class="table table-borderless">
+  <tbody>
+    <tr>
+      <td width="200">投稿画像</td>
+      <td width="300"><%= f.file_field :image, accept: "image/*" %></td>
+    </tr>
+    <tr>
+      <td>ジャンル</td>
+      <td><%= f.collection_select :genre_id, Genre.all, :id, :name %></td>
+    </tr>
+    <tr>
+      <td>ペットの名前</td>
+      <td><%= f.text_field :name %></td>
+    </tr>
+    <tr>
+      <td>ペットの種類</td>
+      <td><%= f.text_field :category %></td>
+    </tr>
+    <tr>
+      <td>本文</td>
+      <td><%= f.text_area :body %></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td><%= f.submit '投稿する', class: "btn btn-success mt-3 mx-auto" %></td>
+    </tr>
+  </tbody>
+</table>
+<% end %>
+
+</div>
