--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,4 +1,60 @@
-<%= render 'public/header' %>
+<!--投稿一覧-->
+<div class="container my-5">
+  <%= render 'public/header' %>
 
-<h1>Public::Items#index</h1>
-<p>Find me in app/views/public/items/index.html.erb</p>
+<div class="row mt-5">
+  <h3>投稿一覧</h3>
+</div>
+
+<div class="row my-3">
+  <%= link_to "新規投稿", new_item_path, class: "btn btn-success" %>
+</div>
+
+<div class="row">
+  <% @items.each do |item| %>
+
+  <div class="col-3 mt-3">
+    <%= link_to item_path(item) do %>
+      <%= image_tag item.get_image(150,150) %></br>
+    <span>
+      <%= item.name %>
+      <% end %>
+    </span></br>
+    <div>
+      コメント：<%= item.comments.count %>件</br>
+      <!--いいね機能-->
+        <div> 
+          <% if item.favorited_by?(current_customer) %>
+          <p>
+            <%= link_to item_favorites_path(item), method: :delete do %>
+              ♥<%= item.favorites.count %> いいね
+            <% end %>
+          </p>
+          <% else %>
+          <p>
+            <%= link_to item_favorites_path(item), method: :post do %>
+              ♡<%= item.favorites.count %> いいね
+            <% end %>
+          </p>
+        <% end %>
+        </div>
+        <!---->
+    </div>
+    <div>
+      <%=link_to customer_path(item.customer) do %>
+        <%= item.customer.name %>
+      <% end %>
+    </div>
+  </div>
+  <% end %>
+</div>
+
+<div class="container">
+	<div class="row">
+	 <div class="col-md-4 offset-md-4 py-2 mt-5">
+	 	<%= paginate @items %>
+	 </div>
+	</div>
+ </div>
+
+</div>
