--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,4 +1,71 @@
-<%= render 'public/header' %>
+<!--投稿詳細ページ-->
+<div class="container my-5">
+  <%= render 'public/header' %>
 
-<h1>Public::Items#show</h1>
-<p>Find me in app/views/public/items/show.html.erb</p>
+  <div class="row no-gutters">
+    <div class="mt-5 col-lg-3">
+      <!--ユーザー名_部分テンプレート(_user)-->
+      <%= render 'public/customers/user', customer: @customer %></br>
+      <div class="row">
+    <%= form_with model: [@item, @comment] do |f| %>
+      <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+      <%= f.submit "送信する" %>
+    <% end %>
+  </div>
+    </div>
+    
+    <div class = "form-group">
+      <div class="col-lg-8 offset-md-1">
+        <div><%= image_tag @item.get_image(300,300) %></div>
+        <!--いいね機能-->
+        <div> 
+          <% if @item.favorited_by?(current_customer) %>
+          <p>
+            <%= link_to item_favorites_path(@item), method: :delete do %>
+              ♥<%= @item.favorites.count %> いいね
+            <% end %>
+          </p>
+          <% else %>
+          <p>
+            <%= link_to item_favorites_path(@item), method: :post do %>
+              ♡<%= @item.favorites.count %> いいね
+            <% end %>
+          </p>
+        <% end %>
+        </div>
+        <!---->
+        <div><strong><%= @item.name %></strong></div>
+        <div>種別：<%= @item.category %></div>
+        <div><%= @item.body %></div>
+        <% if @customer == current_customer %>
+          <div><%= link_to "編集", edit_item_path(@item), class:"btn btn-success btn-block" %></div>
+          <div><%= link_to "削除", item_path(@item.id), method: :delete, "data-confirm" => "本当に消しますか？", class:"btn btn-danger" %></div>
+        <% end %>
+      </div>
+    </div>
+   </div>
+   
+   <div class="row">
+     コメント件数：<%= @item.comments.count %>
+     <table class="table table-striped text-center">
+       <tbody>
+         <% @item.comments.each do |comment| %>
+           <tr>
+             <td><%= comment.comment %></td>
+             <td>
+               <%= link_to customer_path(comment.customer) do %>
+                 <%= comment.customer.name %>さん
+                <% end %>
+             </td>
+             <td><%= comment.created_at.strftime('%Y/%m/%d') %></td>
+             <td>
+                <% if comment.customer == current_customer %>
+                 <%= link_to "削除", item_comment_path(comment.item, comment), method: :delete %>
+                <% end %>
+             </td>
+           </tr>
+          <% end %>
+       </tbody>
+     </table>
+  </div>
+</div>
