--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -16,7 +16,7 @@
         </li>
   
         <li class="nav-item">
-          <%= link_to "お気に入り", item_favorites_path(current_customer.id), class: "nav-link btn btn-outline-secondary mr-2" %>
+          <%= link_to "お気に入り", favorites_customer_path(current_customer.id), class: "nav-link btn btn-outline-secondary mr-2" %>
         </li>
   
         <li class="nav-item">
