--- a/app/views/public/customers/favorites.html.erb
+++ b/app/views/public/customers/favorites.html.erb
@@ -2,13 +2,46 @@
    <%= render 'public/header' %>
    
    <div class="row mt-5">
-    <h3><%= @customer.name %>さんのお気に入り一覧</h3>
+    <h3><%= @customer.name %> さんのお気に入り一覧</h3>
   </div>
   
   <div class="row mt-3">
-    <% @favorite_items.each do |item|%>
+  <% @favorite_items.each do |item| %>
+
+  <div class="col-3 mt-3">
+    <%= link_to item_path(item) do %>
+      <%= image_tag item.get_image(150,150) %></br>
+    <span>
       <%= item.name %>
+      <% end %>
+    </span></br>
+    <div>
+      コメント：<%= item.comments.count %>件</br>
+      <!--いいね機能-->
+        <div> 
+          <% if item.favorited_by?(current_customer) %>
+          <p>
+            <%= link_to item_favorites_path(item), method: :delete do %>
+              ♥<%= item.favorites.count %> いいね
+            <% end %>
+          </p>
+          <% else %>
+          <p>
+            <%= link_to item_favorites_path(item), method: :post do %>
+              ♡<%= item.favorites.count %> いいね
+            <% end %>
+          </p>
+        <% end %>
+        </div>
+        <!---->
+    </div>
+    <div>
+      <%=link_to customer_path(item.customer) do %>
+        <%= item.customer.name %>
+      <% end %>
+    </div>
+    </div>
     <% end %>
-  </div>
+</div>
   
 </div>
