--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -6,7 +6,7 @@
       <!--ユーザー名_部分テンプレート(_user)-->
       <%= render 'user', customer: @customer %></br>
       <!--ユーザーがいいねした投稿一覧のリンク先-->
-      <%= link_to "お気に入り", favorites_customer_path(@customer) %></br>
+      <%= link_to "お気に入り", favorites_customer_path(@customer), class: "btn btn-info" %>
       <!--新規投稿機能-->
       <%= link_to "新規投稿", new_item_path, class: "btn btn-success" %>
     </div>
