--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -10,6 +10,26 @@
   <%= link_to "新規投稿", new_item_path, class: "btn btn-success" %>
 </div>
 
+<div class="row my-3">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>ジャンル検索</th>
+      </tr>
+    </thead>
+    
+    <tbody>
+      <% @genres.each do |genre| %>
+      <tr>
+        <td>
+          <%= link_to genre.name, items_path(genre_id: genre.id), class: "text-secondary" %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
 <div class="row">
   <% @items.each do |item| %>
 
