--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,8 +1,21 @@
-<div class="container">
+<!--サイトトップ画面-->
+<div class="container my-5">
   <%= render 'public/header' %>
-  
-  <div>
-    <%= link_to 'ゲストログイン（閲覧用）', customers_guest_sign_in_path, method: :post %>
+
+  <div class="row mt-3">
+  <span class="text-center">
+    このサイトは、皆さんの自慢のペットの画像投稿掲示板になります。</br>
+    ゲストログインでは投稿画像の閲覧はできますが、</br>
+    コメントやいいねを押すには会員登録が必要になります。</br>
+  </span>
   </div>
   
+  <!--ゲストログイン機能-->
+  <div class="row mt-3">
+    <span class="text-center">
+      <%= link_to 'ゲストログイン（閲覧用）', customers_guest_sign_in_path, class:"btn btn-info", method: :post %>
+      <i class="fas fa-seedling"></i>
+    </span>
+  </div>
+
 </div>
