--- a/app/views/public/items/search.html.erb
+++ b/app/views/public/items/search.html.erb
@@ -1,9 +1,9 @@
-<!--投稿一覧-->
+<!--検索結果-->
 <div class="container my-5">
   <%= render 'public/header' %>
 
 <div class="row mt-5">
-  <h3>投稿一覧</h3>
+  <h3>検索結果 "<%= @keyword %>"</h3>
 </div>
 
 <div class="row my-3">
@@ -16,33 +16,6 @@
       <%= f.text_field :keyword %>
       <%= f.submit "検索" %>
     <% end %>
-  </div>
-</div>
-
-<div class="row my-3">
-  <div class="col-2">
-    <table border="3">
-      <thead>
-        <tr>
-          <th>ジャンル検索</th>
-        </tr>
-      </thead>
-      
-      <tbody>
-        <tr>
-          <td>
-            <%= link_to "全て", items_path, class: "text-secondary" %>
-          </td>
-        </tr>
-        <% @genres.each do |genre| %>
-        <tr>
-          <td>
-            <%= link_to genre.name, items_path(genre_id: genre.id), class: "text-secondary" %>
-          </td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
   </div>
 </div>
 
