--- a/app/views/public/items/edit.html.erb
+++ b/app/views/public/items/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <%= render 'public/header' %>
 
-<!--更新できなかった時のエラーメッセージ-->
+<!--メッセージ-->
 <div class="row d-flex justify-content-center">
   <% if flash[:item_updated_error] %>
     <span class="text-danger"><%= flash[:item_updated_error] %></span>
@@ -38,8 +38,17 @@
       <td><%= f.text_area :body %></td>
     </tr>
     <tr>
+      <td>ステータス</td>
+      <td>
+        <%= f.radio_button :is_draft, :true %> <span>公開</span>
+        <%= f.radio_button :is_draft, :false %> <span>非公開</span>
+      </td>
+    </tr>
+    <tr>
       <td></td>
-      <td><%= f.submit '投稿する', class: "btn btn-success mt-3 mx-auto" %></td>
+      <td>
+        <%= f.submit "更新する",  class:'btn btn-success' %>
+      </td>
     </tr>
   </tbody>
 </table>
