--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -5,8 +5,8 @@
   <div class="row mt-3">
   <span class="text-center">
     このサイトは、皆さんの自慢のペットの画像投稿掲示板になります。</br>
-    ゲストログインでは投稿画像の閲覧はできますが、</br>
-    コメントやいいねを押すには会員登録が必要になります。</br>
+    ゲストログインでも閲覧や投稿、いいね、コメントをすることができますが、</br>
+    ログアウトをした際にデータは削除されます。</br>
   </span>
   </div>
   
