--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -16,6 +16,7 @@
       <%= f.text_field :keyword %>
       <%= f.submit "検索" %>
     <% end %>
+    <%= link_to "クリア" , items_path, class: "btn btn-outline-secondary mt-1" %>
   </div>
 </div>
 
@@ -79,7 +80,7 @@
     <div>
       <%=link_to customer_path(item.customer) do %>
         <%= item.customer.name %>
-      <% end %>
+      <% end %>さん
     </div>
     </div>
     <% end %>
