--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -26,7 +26,7 @@
       <% else %>
       <!--サインインしていない時-->
         <li class="nav-item">
-          <%= link_to "About", about_path, class: "nav-link btn btn-outline-secondary mr-2" %>
+          <%= link_to "Top", top_path, class: "nav-link btn btn-outline-secondary mr-2" %>
         </li>
   
         <li class="nav-item">
