--- a/app/views/public/items/search.html.erb
+++ b/app/views/public/items/search.html.erb
@@ -16,6 +16,7 @@
       <%= f.text_field :keyword %>
       <%= f.submit "検索" %>
     <% end %>
+    <%= link_to "クリア" , items_path, class: "btn btn-outline-secondary mt-1" %>
   </div>
 </div>
 
