--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -12,22 +12,20 @@
     <% end %>
   </div>
 
-  <div class="row no-gutters">
-    <div class="mt-5 col-lg-3">
+  <div class="row no-gutters mt-5">
+    <div class="col-lg-3">
       <!--ユーザー名_部分テンプレート(_user)-->
       <%= render 'public/customers/user', customer: @customer %></br>
       <!--新規投稿機能-->
       <%= link_to "新規投稿", new_item_path, class: "btn btn-success" %></br>
       <!--コメント機能-->
-      <div class="row mt-3">
     <%= form_with model: [@item, @comment] do |f| %>
       <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
       <%= f.submit "送信する" %>
     <% end %>
-  </div>
     </div>
     
-    <div class = "form-group">
+    <div class = "form-group col-lg-9">
       <div class="col-lg-8 offset-md-1">
         <div><%= image_tag @item.get_image(300,300) %></div>
         <!--いいね機能-->
