レイアウト修正、下書き機能修正

--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -1,47 +1,61 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container">
   <!--サインインしている時-->
-    <%= link_to "AnimalLover", top_path, class: "navbar-brand text-secondary" %>
-
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav ml-auto">
-        <% if admin_signed_in? %>
-  
-        <li class="nav-item">
-          <%= link_to "会員一覧", admin_customers_path, class: "nav-link btn btn-outline-secondary mr-2" %>
-        </li>
-  
-        <li class="nav-item">
-          <%= link_to "投稿一覧", admin_items_path, class: "nav-link btn btn-outline-secondary mr-2" %>
-        </li>
-  
-        <li class="nav-item">
-          <%= link_to "ジャンル一覧", admin_genres_path, class: "nav-link btn btn-outline-secondary mr-2" %>
-        </li>
-  
-        <li class="nav-item">
-          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link btn btn-outline-secondary mr-2" %>
-        </li>
-  
-      <% else %>
-      <!--サインインしていない時-->
-        <li class="nav-item">
-          <%= link_to "Top", top_path, class: "nav-link btn btn-outline-secondary mr-2" %>
-        </li>
-  
-        <li class="nav-item">
-          <%= link_to "投稿一覧", items_path, class: "nav-link btn btn-outline-secondary mr-2" %>
-        </li>
-  
-        <li class="nav-item">
-          <%= link_to "新規登録", new_customer_registration_path, class: "nav-link btn btn-outline-secondary mr-2" %>
-        </li>
-  
-        <li class="nav-item">
-            <%= link_to "ログイン", new_customer_session_path, class: "nav-link btn btn-outline-secondary mr-2" %>
-        </li>
-      <% end %>
-      </ul>
-    </div>
+    <head>
+      <%= link_to "AnimalLover", top_path, class: "navbar-brand text-secondary" %>
+    </head>
+    
+    <body class="d-flex flex-column vh-100">
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <!--ボタンの設定-->
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+              aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if admin_signed_in? %>
+        
+                <li class="nav-item">
+                  <%= link_to "会員一覧", admin_customers_path, class: "nav-link btn btn-outline-secondary mr-2" %>
+                </li>
+          
+                <li class="nav-item">
+                  <%= link_to "投稿一覧", admin_items_path, class: "nav-link btn btn-outline-secondary mr-2" %>
+                </li>
+          
+                <li class="nav-item">
+                  <%= link_to "ジャンル一覧", admin_genres_path, class: "nav-link btn btn-outline-secondary mr-2" %>
+                </li>
+          
+                <li class="nav-item">
+                  <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link btn btn-outline-secondary mr-2" %>
+                </li>
+        
+              <% else %>
+              <!--サインインしていない時-->
+                <li class="nav-item">
+                  <%= link_to "Top", top_path, class: "nav-link btn btn-outline-secondary mr-2" %>
+                </li>
+          
+                <li class="nav-item">
+                  <%= link_to "投稿一覧", items_path, class: "nav-link btn btn-outline-secondary mr-2" %>
+                </li>
+          
+                <li class="nav-item">
+                  <%= link_to "新規登録", new_customer_registration_path, class: "nav-link btn btn-outline-secondary mr-2" %>
+                </li>
+          
+                <li class="nav-item">
+                    <%= link_to "ログイン", new_customer_session_path, class: "nav-link btn btn-outline-secondary mr-2" %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </nav>
+      </header>
+    </body>
   </div>
 </nav>
