--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -20,6 +20,7 @@
   </div>
 </div>
 
+<!--ジャンル検索機能-->
 <div class="row my-3">
   <div class="col-2">
     <table border="3">
@@ -47,6 +48,7 @@
   </div>
 </div>
 
+<!--投稿一覧-->
 <div class="row">
   <% @items.each do |item| %>
 
