--- a/app/views/public/customers/_user.html.erb
+++ b/app/views/public/customers/_user.html.erb
@@ -8,7 +8,7 @@
         <tbody>
           <tr>
             <td>ニックネーム</td>
-            <td><%= @customer.name %>さん</td>
+            <td><%= customer.name %>さん</td>
           </tr>
         </tbody>
       </table>
@@ -16,7 +16,7 @@
   <!--ログインユーザーのみマイページ編集用のリンク先表示-->
       <div class="row">
         <div class="col text-center">
-          <% if @customer == current_customer %>
+          <% if customer == current_customer %>
             <%= link_to edit_customer_path(customer.id), class:"btn btn-outline-secondary btn-block" do %>
               <i class="fas fa-user-cog"></i>
             <% end %>
