--- a/app/views/public/customers/favorites.html.erb
+++ b/app/views/public/customers/favorites.html.erb
@@ -20,40 +20,45 @@
  <!--お気に入り一覧-->
     <div class="col-md-9">
       <h4><%= @customer.name %> さんのお気に入り一覧</h4>
-      <% @favorite_items.each do |item| %>
-
-      <%= link_to item_path(item) do %>
-        <%= image_tag item.get_image(150,150) %></br>
-      <span>
-        <%= item.name %>
-        <% end %>
-      </span></br>
-      <div>
-        コメント：<%= item.comments.count %>件</br>
-        <!--いいね機能-->
-          <div> 
-            <% if item.favorited_by?(current_customer) %>
-            <p>
-              <%= link_to item_favorites_path(item), method: :delete do %>
-                ♥<%= item.favorites.count %> いいね
+      
+      <div class="row mt-2">
+        <% @favorite_items.each do |item| %>
+        
+          <div class="col-md-3">
+            <%= link_to item_path(item) do %>
+              <%= image_tag item.get_image(150,150) %></br>
+            <span>
+              <%= item.name %>
               <% end %>
-            </p>
-            <% else %>
-            <p>
-              <%= link_to item_favorites_path(item), method: :post do %>
-                ♡<%= item.favorites.count %> いいね
+            </span></br>
+            <div>
+              コメント：<%= item.comments.count %>件</br>
+              <!--いいね機能-->
+                <div> 
+                  <% if item.favorited_by?(current_customer) %>
+                  <p>
+                    <%= link_to item_favorites_path(item), method: :delete do %>
+                      ♥<%= item.favorites.count %> いいね
+                    <% end %>
+                  </p>
+                  <% else %>
+                  <p>
+                    <%= link_to item_favorites_path(item), method: :post do %>
+                      ♡<%= item.favorites.count %> いいね
+                    <% end %>
+                  </p>
+                <% end %>
+                </div>
+                <!---->
+            </div>
+            <div>
+              <%=link_to customer_path(item.customer) do %>
+                <%= item.customer.name %>
               <% end %>
-            </p>
-          <% end %>
+            </div>
           </div>
-          <!---->
-      </div>
-      <div>
-        <%=link_to customer_path(item.customer) do %>
-          <%= item.customer.name %>
         <% end %>
       </div>
-      <% end %>
     </div>
   </div>
   
