レイアウト修正

--- a/app/views/public/customers/favorites.html.erb
+++ b/app/views/public/customers/favorites.html.erb
@@ -53,7 +53,7 @@
             </div>
             <div>
               <%=link_to customer_path(item.customer) do %>
-                <%= item.customer.name %>
+                <%= item.customer.name %>さん
               <% end %>
             </div>
           </div>
