--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -2,48 +2,97 @@
 <div class="container my-5">
   <%= render 'admin/header' %>
 
-<div class="row mt-3">
-  <h3><%= @customer.name %>さんの会員詳細</h3>
-</div>
-
-<div class="row mt-3">
-    <%= image_tag @customer.profile_image, size: "250x250" %>
-</div>
-
-<div class="row mt-5">
-  <table class="table table-borderless">
-    <tbody>
-      <tr>
-        <td width="120">会員ID</td>
-        <td width="300"><%= @customer.id %></td>
-      </tr>
-      <tr>
-        <td>ニックネーム</td>
-        <td><%= @customer.name %></td>
-      </tr>
-      <tr>
-        <td>メールアドレス</td>
-        <td><%= @customer.email %></td>
-      </tr>
-      <tr>
-        <td>会員ステータス</td>
-        <td>
-          <% if @customer.is_deleted %>
-            <span class="text-danger">
-              <strong>退会</strong>
-            </span>
-          <% else %>
-            <span class="text-primary">
-              <strong>有効</strong>
-            </span>
+  <div class="mt-3">
+    <h3><%= @customer.name %>さんの会員詳細</h3>
+  </div>
+  
+  <div class="row mt-3">
+    <div class="col-4">
+      <div>
+        <%= image_tag @customer.get_profile_image(150,150) %>
+      </div>
+      <div>
+        <table class="table table-borderless">
+          <tbody>
+            <tr>
+              <td width="120">会員ID</td>
+              <td width="300"><%= @customer.id %></td>
+            </tr>
+            <tr>
+              <td>ニックネーム</td>
+              <td><%= @customer.name %></td>
+            </tr>
+            <tr>
+              <td>メールアドレス</td>
+              <td><%= @customer.email %></td>
+            </tr>
+            <tr>
+              <td>会員ステータス</td>
+              <td>
+                <% if @customer.is_deleted %>
+                  <span class="text-danger">
+                    <strong>退会</strong>
+                  </span>
+                <% else %>
+                  <span class="text-primary">
+                    <strong>有効</strong>
+                  </span>
+                <% end %>
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <td><%= link_to "編集する", edit_admin_customer_path(@customer.id), class: "btn btn-success" %></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    
+    <!--登録者の投稿一覧-->
+    <div class="col-8">
+      <h3>投稿一覧</h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>ペットの名前</th>
+            <th>ペットの種類</th>
+            <th>コメント件数</th>
+            <th>ステータス</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @items.each do |item| %>
+            <tr>
+              <td>
+                  <%= link_to item_path(item) do %>
+                    <%= image_tag item.get_image(150,150) %>
+                  <% end %>
+              </td>
+              <td><%= item.name %></td>
+              <td><%= item.category %></td>
+              <td>
+                <%= item.comments.count %>件</br>
+                <%= item.favorites.count %> ♡いいね
+              </td>
+              <td>
+                <% if item.is_draft %>
+                  <span class="text-primary">
+                    <strong>公開中</strong>
+                  </span>
+                <% else %>
+                  <span class="text-danger">
+                    <strong>非公開中</strong>
+                  </span>
+                <% end %>
+              </td>
+              <td><%= link_to "編集", edit_item_path(item), class:"btn btn-success btn-block" %></td>
+            </tr>
           <% end %>
-        </td>
-      </tr>
-      <tr>
-        <td></td>
-        <td><%= link_to "編集する", edit_admin_customer_path(@customer.id), class: "btn btn-success" %></td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+        </tbody>
+       </table>
+    </div>
+  </div>
 </div>
