--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -67,7 +67,7 @@
           <% @items.each do |item| %>
             <tr>
               <td>
-                  <%= link_to item_path(item) do %>
+                  <%= link_to admin_item_path(item) do %>
                     <%= image_tag item.get_image(150,150) %>
                   <% end %>
               </td>
@@ -88,7 +88,7 @@
                   </span>
                 <% end %>
               </td>
-              <td><%= link_to "編集", edit_item_path(item), class:"btn btn-success btn-block" %></td>
+              <td><%= link_to "詳細", admin_item_path(item), class:"btn btn-success btn-block" %></td>
             </tr>
           <% end %>
         </tbody>
